--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "lint": "eslint \"src/**/*.+(js|ts|jsx|tsx)\"",
     "format": " prettier --write \"src/**/*.+(js|ts|jsx|tsx)\"",
     "prepare": "husky",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
@@ -68,9 +70,19 @@
     ]
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@craco/craco": "^7.1.0",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/preset-create-react-app": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-webpack5": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/mockjs": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
@@ -79,8 +91,12 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.1.1",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.2.9",
+    "webpack": "^5.93.0"
   },
   "husky": {
     "hooks": {
